Movielist: Fix button text contrast in default table in dark mode

--- a/apps/movielist/assets/css/_table.scss
+++ b/apps/movielist/assets/css/_table.scss
@@ -23,7 +23,7 @@ tbody{
     .default-table tbody{
 		background-color: #666;
 
-		&, a {
+		&, a:not(.btn) {
 			color: #ddd;
 		}
 	}
